packages/cli/tests/fixtures/errors/none/code/types.ts
import type { VariantProps } from "jade-garden";
import type { codeStyles } from ".";

export type Variants = VariantProps<typeof codeStyles>;
